--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -14,10 +14,24 @@ autoinstall:
     layout: br
 
   storage:
-    layout:
-      name: direct
-      match:
-        patch: /dev/nvme0n1
+  config:
+    - id: disk0
+      type: disk
+      ptable: gpt
+      path: /dev/nvme0n1
+      wipe: superblock-recursive
+    - id: part1
+      type: partition
+      device: disk0
+      size: -1
+    - id: fs_root
+      type: format
+      volume: part1
+      fstype: ext4
+    - id: mount_root
+      type: mount
+      device: fs_root
+      path: /
   
   network:
     version: 2
